--- a/public/accessDenied.html
+++ b/public/accessDenied.html
@@ -14,11 +14,8 @@
 <div id="login-form-wrap">
   <img src="/logo.png" alt="DRDO Logo" width="100" height="100">
   <h2>DESIDOC File Server</h2>
-  <form id="login-form" action="/userManagement" method="get">
-    <h4 style="color:red;">Username already exists </h4>
-    <p>
-    <input type="submit" id="login" value="Try Again">
-    </p>
+  <form id="login-form" action="/" method="get">
+    <h4 style="color:red;">Access Denied : Unauthorised Host</h4>
   </form>
   <div id="create-account-wrap">
     <p>Developed and by Maintained DESIDOC</p>
