--- a/public/files.html
+++ b/public/files.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta charset="UTF-8">
-   <link rel="shortcut icon" href="./favicon.ico">
+   <link rel="icon" type="image/x-icon" href="/images/logo.ico">
    <title>Contents</title>
 
    <link rel="stylesheet" href="./style.css">
