--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>DESIDOC File Server : User Management</title>
  
 <link rel="stylesheet" href="/style.css">
+<link rel="icon" type="image/x-icon" href="/images/logo.ico">
 
 </head>
 <body>
