--- a/public/userManagement.html
+++ b/public/userManagement.html
@@ -5,6 +5,7 @@
   <title>DESIDOC File Server</title>
  
 <link rel="stylesheet" href="/style.css">
+<link rel="icon" type="image/x-icon" href="/images/logo.ico">
 
 </head>
 <script>
