--- a/public/files.html
+++ b/public/files.html
@@ -12,6 +12,9 @@
 <div id="container">
     <div id="image"><img src="/logo.png" alt="DRDO Logo" width="100" height="100"></div>
 	<h2>DESIDOC File server</h2>
+	<form id="login-form" action="/logout" method="post">
+    <input  type="submit" id="logout" value="Logout">
+  </form>
 	<table class="sortable">
 	    <thead>
 		<tr>
