--- a/public/files.html
+++ b/public/files.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <link rel="icon" type="image/x-icon" href="/images/logo.ico">
-   <title>Contents</title>
+   <title>DESIDOC e-Resource Sharing</title>
 
    <link rel="stylesheet" href="./style.css">
 </head>
@@ -11,7 +11,7 @@
 <body>
 <div id="container">
     <div id="image"><img src="/logo.png" alt="DRDO Logo" width="100" height="100"></div>
-	<h2>DESIDOC File server</h2>
+	<h2>DESIDOC e-Resource Sharing</h2>
 	<form id="login-form" action="/logout" method="post">
     <input  type="submit" id="logout" value="Logout">
   </form>
