--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>DESIDOC File Server : User Management</title>
+  <title>Login : DESIDOC e-Resource Sharing</title>
  
 <link rel="stylesheet" href="/style.css">
 <link rel="icon" type="image/x-icon" href="/images/logo.ico">
@@ -14,7 +14,7 @@
 <div id="login-form-wrap">
   
   <img src="/logo.png" alt="DRDO Logo" width="100" height="100">
-  <h2>DESIDOC File Server</h2>
+  <h2>DESIDOC e-Resource Sharing</h2>
   <form id="login-form" action="/login" method="post">
         <p>
     <input type="text" id="username" name="username" placeholder="Username" required><i class="validation"><span></span><span></span></i>
