--- a/public/registrationSuccess.html
+++ b/public/registrationSuccess.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>DESIDOC File Server</title>
+  <title>DESIDOC e-Resource Sharing</title>
  
 <link rel="stylesheet" href="/style.css">
 <link rel="icon" type="image/x-icon" href="/images/logo.ico">
@@ -13,7 +13,7 @@
 
 <div id="login-form-wrap">
   <img src="/logo.png" alt="DRDO Logo" width="100" height="100">
-  <h2>DESIDOC File Server</h2>
+  <h2>DESIDOC e-Resource Sharing</h2>
   <form id="login-form" action="/userManagement" method="get">
     <h4 style="color:greenyellow;">Registration Success</h4>
     <p>
