--- a/public/userManagement.html
+++ b/public/userManagement.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>DESIDOC File Server</title>
+  <title>DESIDOC e-Resource Sharing</title>
  
 <link rel="stylesheet" href="/style.css">
 <link rel="icon" type="image/x-icon" href="/images/logo.ico">
@@ -26,7 +26,7 @@
 <div id="login-form-wrap">
   
   <img src="/logo.png" alt="Trulli" width="100" height="100">
-  <h2>DESIDOC File Server</h2> 
+  <h2>DESIDOC e-Resource Sharing</h2> 
   <h3>New User Registration</h3>
   <form id="login-form" action="/registerUser" method="post">
     <p>
