Chages as per instruction

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   
   <img src="/logo.png" alt="DRDO Logo" width="100" height="100">
   <h2>DESIDOC e-Resource Sharing</h2>
+  
   <form id="login-form" action="/login" method="post">
         <p>
     <input type="text" id="username" name="username" placeholder="Username" required><i class="validation"><span></span><span></span></i>
@@ -27,7 +28,9 @@
     </p>
   </form>
   <div id="create-account-wrap">
+    <p style="color:red;"> Please use Chrome for better expirence</p>
     <p>Developed and by Maintained DESIDOC</p>
+    
   </div><!--create-account-wrap-->
 </div><!--login-form-wrap-->
 <!-- partial -->
