--- a/public/userManagement.html
+++ b/public/userManagement.html
@@ -36,7 +36,9 @@
         <option value="DESIDOC">DESIDOC</option>
         <option value="LRDE">LRDE</option>
         <option value="DLRL">DLRL</option>
-        <option value="RAC">RAC</option>
+        <option value="DMRL">DMRL</option>
+        <option value="CVRDE">CVRDE</option>
+        <option value="ADRDE">ADRDE</option>
       </select> 
     </p>
     <p>
